unpackaged/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <description>Represents all frame and truss plants, small format stores, trade distribution centres and warehouses.</description>
    <label>Store</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>