unpackaged/main/default/objects/Store__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>The store&#39;s address line 1</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>