unpackaged/main/default/objects/Store__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>The store&#39;s address line 2</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>