unpackaged/main/default/objects/Store__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <description>The store&#39;s address line 3</description>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>