unpackaged/main/default/objects/Store__c/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If an Account Manager is named on power pass signup an no corresponding AM is found in Salesforce, the account is assigned to the stores ASM</description>
    <inlineHelpText>Area Sales Manager associated to the store</inlineHelpText>
    <label>ASM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>