unpackaged/main/default/objects/Store__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The store&#39;s city</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>