unpackaged/main/default/objects/Store__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>The store&#39;s email</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>