unpackaged/main/default/objects/Store__c/fields/Engagement_Model__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Model__c</fullName>
    <description>Determines the method used for assigning Powerpass Account Ownership. 
Old Model - the Stores Default Trade Specialist will become the owner. 
New - Ownership is determined by Assignment Rule Metadata records</description>
    <label>Engagement Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>