unpackaged/main/default/objects/Store__c/fields/LifeCycle_Model__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Model__c</fullName>
    <label>LifeCycle Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>