unpackaged/main/default/objects/Store__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Unrestricted list of location types</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Distribution Centre</fullName>
            </value>
            <value>
                <fullName>Frame and Truss Plant</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
            <value>
                <fullName>Logical</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Small Format Store</fullName>
            </value>
            <value>
                <fullName>Trade Distribution Centre</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>