unpackaged/main/default/objects/Store__c/fields/Operations_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Operations_Area_Code__c</fullName>
    <description>The store&#39;s operations area code</description>
    <label>Operations Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>