unpackaged/main/default/objects/Store__c/fields/Operations_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Operations_Region_Code__c</fullName>
    <description>The store&#39;s operations region code</description>
    <label>Operations Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>