unpackaged/main/default/objects/Store__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This is the Store phone number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>