unpackaged/main/default/objects/Store__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>The store&#39;s postcode</description>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>