unpackaged/main/default/objects/Store__c/fields/Primary_Trade_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trade_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Default Account owner for Accounts who have selected this store as their home store</description>
    <inlineHelpText>The Default Account owner for Accounts who have selected this store as their home store</inlineHelpText>
    <label>Primary Trade Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Primary_Store</relationshipName>
    <type>Lookup</type>
</CustomField>