unpackaged/main/default/objects/Store__c/fields/Retail_Zone__c.field-meta.xml
<CustomField>
    <fullName>Retail_Zone__c</fullName>
    <description>Unrestricted list of retail zones</description>
    <label>Retail Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AU RZ 1</fullName>
            </value>
            <value>
                <fullName>AU RZ 2</fullName>
            </value>
            <value>
                <fullName>AU RZ 3</fullName>
            </value>
            <value>
                <fullName>AU RZ 4</fullName>
            </value>
            <value>
                <fullName>AU RZ 5</fullName>
            </value>
            <value>
                <fullName>AU RZ 6</fullName>
            </value>
            <value>
                <fullName>AU RZ 7 - 1</fullName>
            </value>
            <value>
                <fullName>AU RZ 7 - 2</fullName>
            </value>
            <value>
                <fullName>AU RZ 7 - 3</fullName>
            </value>
            <value>
                <fullName>AU RZ 7 - 4</fullName>
            </value>
            <value>
                <fullName>AU RZ 7 - 5</fullName>
            </value>
            <value>
                <fullName>AU RZ 8</fullName>
            </value>
            <value>
                <fullName>AU RZ 9</fullName>
            </value>
            <value>
                <fullName>AU RZ 10</fullName>
            </value>
            <value>
                <fullName>NZ RZ 1</fullName>
            </value>
            <value>
                <fullName>NZ RZ 2</fullName>
            </value>
            <value>
                <fullName>NZ RZ 3</fullName>
            </value>
            <value>
                <fullName>NZ RZ 4</fullName>
            </value>
            <value>
                <fullName>NZ RZ 5</fullName>
            </value>
            <value>
                <fullName>NZ RZ 6</fullName>
            </value>
            <value>
                <fullName>NZ RZ 7</fullName>
            </value>
            <value>
                <fullName>NZ RZ 8</fullName>
            </value>
            <value>
                <fullName>NZ RZ 9</fullName>
            </value>
            <value>
                <fullName>NZ RZ 10</fullName>
            </value>
            <value>
                <fullName>NZ RZ 11</fullName>
            </value>
            <value>
                <fullName>NZ RZ 12</fullName>
            </value>
            <value>
                <fullName>NZ RZ 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>