unpackaged/main/default/objects/Store__c/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <description>Sales rep ID that is used to define the role of the trade specialist.</description>
    <label>Sales Rep ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>