unpackaged/main/default/objects/Store__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>NZ Template based in store. To be viewed and managed by NZ Quote Office members.</description>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>