unpackaged/main/default/objects/Store__c/fields/Trade_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Trade_Region_Code__c</fullName>
    <description>The store&#39;s trade region code</description>
    <label>Trade Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>