unpackaged/main/default/objects/Store__c/fields/Trade_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>Trade_Specialist_Email__c</fullName>
    <label>Trade Specialist Email</label>
    <type>Email</type>
</CustomField>