unpackaged/main/default/objects/Store__c/validationRules/Store_Changed_By_TS.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Changed_By_TS</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Is_TS__c</errorConditionFormula>
    <errorMessage>Trade Specialists cannot update store records</errorMessage>
</ValidationRule>