unpackaged/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Type__c</columns>
    <columns>Location_Code__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email_Address__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Location_Type__c</field>
        <operation>equals</operation>
        <value>Small Format Store,Trade Distribution Centre,Warehouse</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>(Closed)</value>
    </filters>
    <label>All</label>
</ListView>